[gd_scene load_steps=71 format=3 uid="uid://d28rir2ogskrc"]

[ext_resource type="Script" path="res://Scripts/ModalWindow.gd" id="1"]
[ext_resource type="Theme" uid="uid://bev8s04hvds01" path="res://Themes/UI Theme.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://dvs682kkxgcb1" path="res://Images/HUD.Button.png" id="3"]
[ext_resource type="Texture2D" uid="uid://chq0x217cc6y2" path="res://Images/HUD.Button.Pressed.png" id="4"]
[ext_resource type="Texture2D" uid="uid://d08prrqcx51cf" path="res://Images/Farmer.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dw2tkcthulm4n" path="res://Images/HUD.Shotgun.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cs0ovhrmvfsgo" path="res://Images/HUD.Frame.1.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cfsopj4wqo48i" path="res://Images/HUD.ScatlingGun.png" id="8"]
[ext_resource type="Texture2D" uid="uid://c1d2pdc6cds73" path="res://Images/HUD.Shovel.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bbxabnsn633wd" path="res://Images/HUD.RocketLauncher.png" id="10"]
[ext_resource type="Texture2D" uid="uid://b87tr5ugueh8x" path="res://Images/HUD.RailGun.png" id="11"]
[ext_resource type="Texture2D" uid="uid://b8o31l6s35llr" path="res://Images/HUD.Pistol.png" id="12"]
[ext_resource type="Texture2D" uid="uid://m3cmx0jnub14" path="res://Images/Goblin.png" id="13"]
[ext_resource type="Texture2D" uid="uid://buevuwfnht5xy" path="res://Images/Crap.png" id="14"]
[ext_resource type="Texture2D" uid="uid://u7r2me5dch5y" path="res://Images/Crap.Rainbow.png" id="15"]
[ext_resource type="AudioStream" uid="uid://er2d5vg4qmck" path="res://Audio/UI/Click.wav" id="16"]
[ext_resource type="Texture2D" uid="uid://be22tksh6dckh" path="res://Images/FarmHouseOpen.png" id="17"]
[ext_resource type="Texture2D" uid="uid://bismxi4ljldoh" path="res://Images/Gnome.Glowing.SpriteSheet.png" id="18"]
[ext_resource type="Texture2D" uid="uid://hadmpxioice2" path="res://Images/FarmHouse.png" id="19"]

[sub_resource type="SpriteFrames" id="51"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}],
"loop": true,
"name": &"default",
"speed": 0.5
}]

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("18")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource("18")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("18")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("18")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("18")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("18")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource("18")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource("18")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("18")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource("18")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource("18")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource("18")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource("18")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="47"]
atlas = ExtResource("18")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="48"]
atlas = ExtResource("18")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="49"]
atlas = ExtResource("18")
region = Rect2(144, 144, 48, 48)

[sub_resource type="SpriteFrames" id="50"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("34")
}, {
"duration": 1.0,
"texture": SubResource("35")
}, {
"duration": 1.0,
"texture": SubResource("36")
}, {
"duration": 1.0,
"texture": SubResource("37")
}, {
"duration": 1.0,
"texture": SubResource("38")
}, {
"duration": 1.0,
"texture": SubResource("39")
}, {
"duration": 1.0,
"texture": SubResource("40")
}, {
"duration": 1.0,
"texture": SubResource("41")
}, {
"duration": 1.0,
"texture": SubResource("42")
}, {
"duration": 1.0,
"texture": SubResource("43")
}, {
"duration": 1.0,
"texture": SubResource("44")
}, {
"duration": 1.0,
"texture": SubResource("45")
}, {
"duration": 1.0,
"texture": SubResource("46")
}, {
"duration": 1.0,
"texture": SubResource("47")
}, {
"duration": 1.0,
"texture": SubResource("48")
}, {
"duration": 1.0,
"texture": SubResource("49")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("5")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("5")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("5")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("5")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("5")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("5")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("5")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("5")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("5")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("5")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("5")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("5")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("5")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("5")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("5")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("5")
region = Rect2(48, 96, 16, 32)

[sub_resource type="SpriteFrames" id="17"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}, {
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="SpriteFrames" id="52"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}],
"loop": true,
"name": &"default",
"speed": 0.7
}]

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("13")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("13")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("13")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("13")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("13")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("13")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("13")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("13")
region = Rect2(48, 96, 16, 32)

[sub_resource type="SpriteFrames" id="19"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("24")
}, {
"duration": 1.0,
"texture": SubResource("20")
}, {
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}, {
"duration": 1.0,
"texture": SubResource("23")
}, {
"duration": 1.0,
"texture": SubResource("25")
}, {
"duration": 1.0,
"texture": SubResource("26")
}, {
"duration": 1.0,
"texture": SubResource("27")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="28"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("15")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("15")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("15")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("15")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("30")
}, {
"duration": 1.0,
"texture": SubResource("31")
}, {
"duration": 1.0,
"texture": SubResource("32")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ModalWindow" type="Control"]
process_mode = 2
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 2
layer = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
color = Color(0.258824, 0.12549, 0, 0.854902)

[node name="Poosed" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/Poosed"]
layout_mode = 0
anchor_right = 15.948
offset_left = 112.0
offset_top = 16.0
offset_right = -386.92
offset_bottom = 35.0
scale = Vector2(3, 3)
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("2")
text = "Game Poosed"

[node name="Resume" type="TextureButton" parent="CanvasLayer/Poosed"]
layout_mode = 0
offset_left = 96.0
offset_top = 124.0
offset_right = 288.0
offset_bottom = 167.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Poosed/Resume"]
layout_mode = 0
offset_left = 58.0
offset_top = 11.0
offset_right = 134.0
offset_bottom = 30.0
theme = ExtResource("2")
text = "Resume"

[node name="Restart" type="TextureButton" parent="CanvasLayer/Poosed"]
layout_mode = 0
offset_left = 96.0
offset_top = 220.0
offset_right = 288.0
offset_bottom = 263.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Poosed/Restart"]
layout_mode = 0
offset_left = 54.0
offset_top = 11.0
offset_right = 139.0
offset_bottom = 30.0
theme = ExtResource("2")
text = "Restart"

[node name="Quit" type="TextureButton" parent="CanvasLayer/Poosed"]
layout_mode = 0
offset_left = 352.0
offset_top = 220.0
offset_right = 544.0
offset_bottom = 263.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Poosed/Quit"]
layout_mode = 0
offset_left = 75.0
offset_top = 12.0
offset_right = 120.0
offset_bottom = 31.0
theme = ExtResource("2")
text = "Quit"

[node name="How to Play" type="TextureButton" parent="CanvasLayer/Poosed"]
layout_mode = 0
offset_left = 352.0
offset_top = 124.0
offset_right = 544.0
offset_bottom = 167.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Poosed/How to Play"]
layout_mode = 0
offset_left = 30.0
offset_top = 11.0
offset_right = 169.0
offset_bottom = 30.0
theme = ExtResource("2")
text = "How to Play"

[node name="HowToPlay" type="Control" parent="CanvasLayer"]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Space" type="Label" parent="CanvasLayer/HowToPlay"]
layout_mode = 0
offset_left = 394.0
offset_top = 210.0
offset_right = 585.0
offset_bottom = 229.0
theme = ExtResource("2")
text = "Action: Space"

[node name="HudShotgun" type="AnimatedSprite2D" parent="CanvasLayer/HowToPlay/Space"]
position = Vector2(-50, -4)
scale = Vector2(0.666667, 0.666667)
sprite_frames = SubResource("51")

[node name="HudShotgun2" type="AnimatedSprite2D" parent="CanvasLayer/HowToPlay/Space"]
position = Vector2(-1, 38)
scale = Vector2(1.27083, 1.27083)
sprite_frames = SubResource("50")
frame = 14

[node name="Title" type="Label" parent="CanvasLayer/HowToPlay"]
layout_mode = 0
offset_left = 104.0
offset_top = 16.0
offset_right = 248.0
offset_bottom = 35.0
scale = Vector2(3, 3)
theme = ExtResource("2")
text = "How to Play"

[node name="Move" type="Label" parent="CanvasLayer/HowToPlay"]
layout_mode = 0
offset_left = 162.0
offset_top = 134.0
offset_right = 287.0
offset_bottom = 153.0
theme = ExtResource("2")
text = "Move: WASD"

[node name="Player" type="AnimatedSprite2D" parent="CanvasLayer/HowToPlay/Move"]
position = Vector2(-37, 4)
scale = Vector2(2, 2)
sprite_frames = SubResource("17")
frame = 12

[node name="Shoot" type="Label" parent="CanvasLayer/HowToPlay"]
layout_mode = 0
offset_left = 394.0
offset_top = 134.0
offset_right = 554.0
offset_bottom = 153.0
theme = ExtResource("2")
text = "Shoot: L-Click"

[node name="HudShotgun" type="AnimatedSprite2D" parent="CanvasLayer/HowToPlay/Shoot"]
position = Vector2(-23, 3)
scale = Vector2(3, 3)
sprite_frames = SubResource("52")

[node name="Weapons" type="Label" parent="CanvasLayer/HowToPlay"]
layout_mode = 0
offset_left = 163.0
offset_top = 210.0
offset_right = 286.0
offset_bottom = 229.0
theme = ExtResource("2")
text = "Weapons: R"

[node name="Node" type="Node2D" parent="CanvasLayer/HowToPlay/Weapons"]
position = Vector2(-128, -212)

[node name="HudFrame1" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node"]
position = Vector2(75, 214)
texture = ExtResource("7")

[node name="HudFrame2" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node"]
position = Vector2(92, 244)
texture = ExtResource("7")

[node name="HudFrame3" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node"]
position = Vector2(109, 231)
texture = ExtResource("7")

[node name="HudFrame4" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node"]
position = Vector2(75, 231)
texture = ExtResource("7")

[node name="HudFrame5" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node"]
position = Vector2(109, 214)
texture = ExtResource("7")

[node name="HudFrame6" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node"]
position = Vector2(92, 201)
texture = ExtResource("7")

[node name="HudShovel" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node"]
position = Vector2(92, 244)
scale = Vector2(0.375, 0.375)
texture = ExtResource("9")

[node name="HudPistol" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node/HudShovel"]
position = Vector2(45.3333, -34.6667)
texture = ExtResource("12")

[node name="HudShotgun" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node/HudShovel/HudPistol"]
position = Vector2(0, -45.3333)
texture = ExtResource("6")

[node name="HudScatlingGun" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node/HudShovel/HudPistol"]
position = Vector2(-45.3333, -80)
texture = ExtResource("8")

[node name="HudRocketLauncher" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node/HudShovel/HudPistol"]
position = Vector2(-90.6667, -45.3333)
texture = ExtResource("10")

[node name="HudRailGun" type="Sprite2D" parent="CanvasLayer/HowToPlay/Weapons/Node/HudShovel/HudPistol"]
position = Vector2(-90.6667, 0)
texture = ExtResource("11")

[node name="Close" type="TextureButton" parent="CanvasLayer/HowToPlay"]
texture_filter = 1
layout_mode = 0
offset_left = 223.0
offset_top = 296.0
offset_right = 415.0
offset_bottom = 339.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/HowToPlay/Close"]
layout_mode = 0
offset_left = 52.0
offset_top = 12.0
offset_right = 141.0
offset_bottom = 31.0
theme = ExtResource("2")
text = "Go Back"

[node name="GameOver" type="Control" parent="CanvasLayer"]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 104.0
offset_top = 16.0
offset_right = 248.0
offset_bottom = 35.0
scale = Vector2(3, 3)
theme = ExtResource("2")
text = "You Poose!"

[node name="Poo Banner" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 175.0
offset_top = 175.0
offset_right = 489.0
offset_bottom = 194.0
theme = ExtResource("2")

[node name="Wave Banner" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 189.0
offset_top = 103.0
offset_right = 468.0
offset_bottom = 122.0
theme = ExtResource("2")

[node name="AnimatedSprite2" type="AnimatedSprite2D" parent="CanvasLayer/GameOver"]
position = Vector2(143, 103)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("19")

[node name="AnimatedSprite3" type="AnimatedSprite2D" parent="CanvasLayer/GameOver/AnimatedSprite2"]
position = Vector2(20, -9.23077)
sprite_frames = SubResource("19")

[node name="AnimatedSprite2" type="AnimatedSprite2D" parent="CanvasLayer/GameOver/AnimatedSprite2"]
position = Vector2(-21.5385, -9.23077)
sprite_frames = SubResource("19")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/GameOver"]
position = Vector2(120, 185)
scale = Vector2(2, 2)
sprite_frames = SubResource("28")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/GameOver/AnimatedSprite2D"]
position = Vector2(8.5, 8)
sprite_frames = SubResource("33")

[node name="Restart" type="TextureButton" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 224.0
offset_top = 269.0
offset_right = 416.0
offset_bottom = 312.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/GameOver/Restart"]
layout_mode = 0
offset_left = 54.0
offset_top = 11.0
offset_right = 139.0
offset_bottom = 30.0
theme = ExtResource("2")
text = "Restart"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16")
volume_db = -10.0

[connection signal="pressed" from="CanvasLayer/Poosed/Resume" to="." method="set_is_paused" binds= [false]]
[connection signal="pressed" from="CanvasLayer/Poosed/Restart" to="." method="trigger_game_reset"]
[connection signal="pressed" from="CanvasLayer/Poosed/Quit" to="." method="quit_game"]
[connection signal="pressed" from="CanvasLayer/Poosed/How to Play" to="." method="show_how_to_play"]
[connection signal="pressed" from="CanvasLayer/HowToPlay/Close" to="." method="unpause"]
[connection signal="pressed" from="CanvasLayer/GameOver/Restart" to="." method="trigger_game_reset"]
